--- a/styles/all/template/event/overall_header_body_before.html
+++ b/styles/all/template/event/overall_header_body_before.html
@@ -1,17 +1,17 @@
 <!-- IF FORUMLIST_RELOAD -->
 <script>var auto_refresh = setInterval(function(){
 $('#forum_list_ricarica').load('{URL_CORRENTE} #forum_list_ricarica');
-}, 8000);</script> 
+}, {TIME_RELOAD}000);</script> 
 <!-- ENDID -->
 
 <!-- IF WHOISONLINE_RELOAD -->
 <script>var auto_refresh = setInterval(function(){
 $('#whoisonline_ricarica').load('{URL_CORRENTE} #whoisonline_ricarica');
-}, 8000);</script> 
+}, {TIME_RELOAD}000);</script> 
 <!-- ENDID -->
 
 <!-- IF POSTS_RELOAD -->
 <script>var auto_refresh = setInterval(function(){
 $('#whoisonline_ricarica').load('{URL_CORRENTE} #whoisonline_ricarica');
-}, 8000);</script> 
+}, {TIME_RELOAD}000);</script> 
 <!-- ENDID -->
