--- a/styles/all/template/event/overall_header_body_before.html
+++ b/styles/all/template/event/overall_header_body_before.html
@@ -2,16 +2,16 @@
 <script>var auto_refresh = setInterval(function(){
 $('#forum_list_ricarica').load('{URL_CORRENTE} #forum_list_ricarica');
 }, {TIME_RELOAD}000);</script> 
-<!-- ENDID -->
+<!-- ENDIF -->
 
 <!-- IF WHOISONLINE_RELOAD -->
 <script>var auto_refresh = setInterval(function(){
 $('#whoisonline_ricarica').load('{URL_CORRENTE} #whoisonline_ricarica');
 }, {TIME_RELOAD}000);</script> 
-<!-- ENDID -->
+<!-- ENDIF -->
 
 <!-- IF POSTS_RELOAD -->
 <script>var auto_refresh = setInterval(function(){
-$('#whoisonline_ricarica').load('{URL_CORRENTE} #whoisonline_ricarica');
+$('#posts').load('{URL_CORRENTE} #posts');
 }, {TIME_RELOAD}000);</script> 
-<!-- ENDID -->
+<!-- ENDIF -->
